Feature edit deck (#3)
* Tidy the open api spec

Abstracted some of the request and response bodies out into reusable parts
Added global tags
Updated the license to match the repo
Added new endpoint verbs to prepare for deck edit and delete

* Fixed a bug

When throwing from Prisma this would halt the web server process and prevent further connections, so added a try catch to handle returning a correct 404 response

* Outline todo items

* Implement edit deck functionality
